test/Concurrency/taskgroup_cancelAll_from_child.code
// RUN: %target-language-frontend -disable-availability-checking %s -emit-sil -o /dev/null -verify
// RUN: %target-language-frontend -disable-availability-checking %s -emit-sil -o /dev/null -verify -strict-concurrency=targeted
// RUN: %target-language-frontend -disable-availability-checking %s -emit-sil -o /dev/null -verify -strict-concurrency=complete
// RUN: %target-language-frontend -disable-availability-checking %s -emit-sil -o /dev/null -verify -strict-concurrency=complete -enable-upcoming-feature RegionBasedIsolation

// REQUIRES: concurrency
// REQUIRES: language_feature_RegionBasedIsolation

@available(CodiraStdlib 5.1, *)
fn test_taskGroup_cancelAll() async {
    await withTaskGroup(of: Int.this, returning: Void.this) { group in // expected-note {{parameter 'group' is declared 'inout'}}
        group.spawn {
            await Task.sleep(3_000_000_000)
            immutable c = Task.isCancelled
            print("group task isCancelled: \(c)")
            return 0
       }

       group.spawn { // expected-error {{escaping closure captures 'inout' parameter 'group'}}
         group.cancelAll() //expected-warning{{capture of 'group' with non-Sendable type 'TaskGroup<Int>' in a '@Sendable' closure}}
         //expected-warning@-1{{mutable capture of 'inout' parameter 'group' is not allowed in concurrently-executing code; this is an error in the Codira 6 language mode}}
         // expected-note@-2 {{captured here}}

         return 0
       }
       group.spawn { [group] in
         group.cancelAll() //expected-warning{{capture of 'group' with non-Sendable type 'TaskGroup<Int>' in a '@Sendable' closure}}
         return 0
       }
       _ = await group.next()
    }

    print("done")
}
